# riff

./: Cargo.toml  README.md
src/: diff.rs  main.rs
