[package]
name = "riff-comp"
version = "0.1.0"
edition = "2018"
homepage = "https://github.com/mahdi-frms/riff"
repository = "https://github.com/mahdi-frms/riff"
author = ["mahdi-frms <mahdif1380@outlook.com>"]
description = "file comparison utility built in rust"
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
colored = "2"